# mirea-hahaton

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nats.conf  pyproject.toml  ws_tester.py
app/: Dockerfile  __main__.py  app.py  config.py  socket.py  sockets.py  ws_manager.py
app/depends/: scans.py
app/errors/: scans.py
app/exceptions/: scans.py
app/routes/: __init__.py  convert.py  locations.py  randomizer.py  scan.py  scans.py  ws.py
app/schemas/: base.py  scan_request.py
backend/: Dockerfile  README.md  pyproject.toml
backend/src/: plotter.py
backend/src/app/: config.py
backend/src/app/exceptions/: scans.py
backend/src/app/routes/: locations.py  scans.py
backend/src/database/models/: __init__.py
backend/src/database/repos/: scan_port.py  scan_result.py
backend/src/di/services/: services.py
backend/src/migrations/versions/: 0003_updated_at.py
backend/src/query/: config.py
backend/src/query/tasks/: scan.py
backend/src/scheduler/: config.py
backend/src/schemas/query/: scan_query.py
backend/src/services/scans/: task.py
backend/src/utils/: paths.py
database/: connection.py
database/models/: __init__.py  base.py  open_port.py  scan_port.py  scan_result.py  vuls.py
database/repos/: open_port.py  scan_port.py  scan_result.py
di/: container.py
di/database/: repos.py
di/nats/: connection.py
di/services/: services.py
di/ws/: manager.py
frontend/: README.md
migrations/: env.py
migrations/versions/: 0001_init.py  0004_port_status.py  0005_nullable_true.py  0007_reason.py  0008_end.py
query/: Dockerfile  __main__.py  app.py  config.py
query/tasks/: scan.py
query/utils/nmap/: __init__.py  commands.py  funcs.py  parsers.py
scheduler/: __main__.py
scheduler/tasks/: vullist.py
schemas/: convert_api.py  ip.py  scan_api.py  scan_query.py
services/: scan_start.py  scan_task.py
src/: plotter.py
src/app/: app.py
src/app/depends/: scans.py
src/app/routes/: convert.py
src/database/repos/: base.py  vuls.py
src/di/database/: repos.py
src/migrations/: env.py
src/migrations/versions/: 0001_init.py  0002_vuls.py  0006_type_to_protocol.py
src/query/tasks/: __init__.py
src/query/utils/nmap/: funcs.py  parsers.py
src/scheduler/tasks/: __init__.py
src/schemas/api/: locations_api.py  scan_api.py
src/services/scans/: start.py
src/utils/: nmap_generate_flags.py  paths.py  tool_cy.py
src/utils/enums/: nmap.py
utils/: ip_validate.py  nmap_generate_flags.py  severity.py  tool_cy.py
