[tool.poetry]
name = "mirea-hahaton"
version = "0.1.0"
description = "Mirea hahaton project"
authors = ["K1rLes <kirill.lesovoi@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
pydantic = "^2.10.1"
loguru = "^0.7.2"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
dishka = "^1.4.1"
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
